<?xml version="1.0" encoding="utf-8"?>
<!--coded by: Atilla Varga-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#f3bd76"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/homeIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#f3bd76"

            android:contentDescription="@string/homeButton"
            android:cropToPadding="true"
            android:paddingLeft="17dp"
            android:paddingTop="2dp"
            android:paddingRight="17dp"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/home_icon" />

        <ImageView
            android:id="@+id/menuIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/menuButton"
            android:cropToPadding="false"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/menu_icon" />

        <ImageView
            android:id="@+id/aboutIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/aboutButton"
            android:cropToPadding="false"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:paddingBottom="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/about_icon" />

        <ImageView
            android:id="@+id/bagIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/bagButton"
            android:cropToPadding="false"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:scaleType="fitXY"
            android:scaleX="1.2"
            app:srcCompat="@drawable/bag_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#f3bd76"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/layoutLogo"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#f3bd76"
            android:paddingLeft="90dp"
            android:paddingTop="0dp"
            android:paddingRight="90dp"
            android:paddingBottom="0dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="465dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:text="@string/contact" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/textView65"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"

                    android:text="@string/email" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"

                    android:text="@string/fastFoodName" />

                <TextView
                    android:id="@+id/textView63"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"

                    android:text="@string/contactInfo" />

                <TextView
                    android:id="@+id/textView64"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"

                    android:text="@string/streetAddress" />

                <TextView
                    android:id="@+id/textView66"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"

                    android:text="@string/emailAddress" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>