<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f3bd76"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/homeIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#f3bd76"
            android:contentDescription="@string/homeButton"
            android:cropToPadding="true"
            android:paddingLeft="17dp"
            android:paddingTop="2dp"
            android:paddingRight="17dp"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/home_icon" />

        <ImageView
            android:id="@+id/menuIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/menuButton"
            android:cropToPadding="false"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/menu_icon" />

        <ImageView
            android:id="@+id/aboutIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/aboutButton"
            android:cropToPadding="false"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:paddingBottom="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/about_icon" />

        <ImageView
            android:id="@+id/bagIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/bagButton"
            android:cropToPadding="false"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:scaleType="fitXY"
            android:scaleX="1.2"
            app:srcCompat="@drawable/bag_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f3bd76">

        <ImageView
            android:id="@+id/layoutLogo"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#f3bd76"
            android:paddingLeft="90dp"
            android:paddingTop="0dp"
            android:paddingRight="90dp"
            android:paddingBottom="0dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/cartCardView"
        android:layout_margin="5dp"
        android:layout_below="@+id/linearLayout"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/checkoutItemImageView"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/checkoutItemImageView"
                android:text="Sample ITEM Name"
                android:id="@+id/nameItemTextView"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/checkoutItemImageView"
                android:layout_below="@+id/nameItemTextView"
                android:text="@string/zeroDollar"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cartCardView"
        android:text="@string/oder_summary"
        android:layout_marginTop="10dp"
        android:id="@+id/summaryTextView"
        android:layout_margin="5dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/summaryTextView"
        android:text="@string/subtotal"
        android:id="@+id/subtotalTextView"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtotalTextView"
        android:text="@string/sales_tax"
        android:id="@+id/taxTextView"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/taxTextView"
        android:text="@string/total"
        android:id="@+id/totalTextView"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/summaryTextView"
        android:text="@string/zeroDollar"
        android:id="@+id/subtotalTextViewPayment"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtotalTextView"
        android:text="@string/zeroDollar"
        android:id="@+id/taxTextViewPayment"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/taxTextView"
        android:text="@string/zeroDollar"
        android:id="@+id/totalTextViewPayment"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"/>


</RelativeLayout>