<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#f3bd76"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/homeIcon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="#f3bd76"
            android:contentDescription="@string/homeButton"

            android:padding="10dp"
            app:srcCompat="@drawable/home_icon" />

        <ImageView
            android:id="@+id/menuIcon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/menuButton"
            android:padding="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/menu_icon" />

        <ImageView
            android:id="@+id/aboutIcon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/aboutButton"
            android:padding="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/about_icon" />

        <ImageView
            android:id="@+id/bagIcon"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/bagButton"
            android:padding="10dp"
            app:srcCompat="@drawable/bag_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#f3bd76"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/layoutLogo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="#f3bd76"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>